--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,6 @@ services:
             - DISABLE_HTTPS
             - JICOFO_AUTH_USER
             - LETSENCRYPT_DOMAIN
-            - LETSENCRYPT_EMAIL
             - PUBLIC_URL
             - XMPP_DOMAIN
             - XMPP_AUTH_DOMAIN
@@ -37,7 +36,11 @@ services:
             - JIBRI_RECORDER_USER
             - JIBRI_RECORDER_PASSWORD
             - ENABLE_RECORDING
+            - VIRTUAL_HOST=meet.agenixo.eu
+            - LETSENCRYPT_HOST=meet.agenixo.eu
+            - LETSENCRYPT_EMAIL=dev@agenixo.eu
         networks:
+            private_network:
             meet.jitsi:
                 aliases:
                     - ${XMPP_DOMAIN}
@@ -101,6 +104,7 @@ services:
             - LOG_LEVEL
             - TZ
         networks:
+            private_network:
             meet.jitsi:
                 aliases:
                     - ${XMPP_SERVER}
@@ -129,6 +133,7 @@ services:
             - prosody
         networks:
             meet.jitsi:
+            private_network:
 
     # Video bridge
     jvb:
@@ -156,7 +161,11 @@ services:
             - prosody
         networks:
             meet.jitsi:
+            private_network:
 
 # Custom network so all services can communicate using a FQDN
 networks:
     meet.jitsi:
+    private_network:
+        external: true
+        name: nginx-proxy
