--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,17 +5,26 @@ services:
     web:
         image: jitsi/web
         expose:
-        - 80
+            - 8282
+        ports:
+            - '${HTTP_PORT}:80'
+            - '${HTTPS_PORT}:443'
         volumes:
             - ${CONFIG}/web:/config
+            - ${CONFIG}/web/letsencrypt:/etc/letsencrypt
             - ${CONFIG}/transcripts:/usr/share/jitsi-meet/transcripts
         environment:
             - ENABLE_AUTH
             - ENABLE_GUESTS
+            - ENABLE_LETSENCRYPT
             - ENABLE_HTTP_REDIRECT
             - ENABLE_TRANSCRIPTIONS
             - DISABLE_HTTPS
             - JICOFO_AUTH_USER
+            - LETSENCRYPT_DOMAIN
+            - VIRTUAL_HOST=meet.agenixo.eu
+            - LETSENCRYPT_HOST=meet.agenixo.eu
+            - LETSENCRYPT_EMAIL=dev@agenixo.eu
             - PUBLIC_URL
             - XMPP_DOMAIN
             - XMPP_AUTH_DOMAIN
@@ -32,9 +41,10 @@ services:
             - JIBRI_RECORDER_USER
             - JIBRI_RECORDER_PASSWORD
             - ENABLE_RECORDING
-            - VIRTUAL_HOST=meet.agenixo.eu
-            - LETSENCRYPT_HOST=meet.agenixo.eu
-            - LETSENCRYPT_EMAIL=dev@agenixo.eu
+        networks:
+            meet.jitsi:
+                aliases:
+                    - ${XMPP_DOMAIN}
 
     # XMPP server
     prosody:
@@ -94,6 +104,10 @@ services:
             - JWT_TOKEN_AUTH_MODULE
             - LOG_LEVEL
             - TZ
+        networks:
+            meet.jitsi:
+                aliases:
+                    - ${XMPP_SERVER}
 
     # Focus component
     jicofo:
@@ -117,6 +131,8 @@ services:
             - TZ
         depends_on:
             - prosody
+        networks:
+            meet.jitsi:
 
     # Video bridge
     jvb:
@@ -142,9 +158,9 @@ services:
             - TZ
         depends_on:
             - prosody
+        networks:
+            meet.jitsi:
 
 # Custom network so all services can communicate using a FQDN
 networks:
-  default:
-    external:
-      name: nginx-proxy
+    meet.jitsi:
