--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,6 @@ services:
             - 80
         volumes:
             - ${CONFIG}/web:/config
-            - ${CONFIG}/web/letsencrypt:/etc/letsencrypt
             - ${CONFIG}/transcripts:/usr/share/jitsi-meet/transcripts
         environment:
             - ENABLE_AUTH
@@ -42,7 +41,7 @@ services:
             - JIBRI_RECORDER_PASSWORD
             - ENABLE_RECORDING
         networks:
-            meet.jitsi:
+            nginx-proxy:
                 aliases:
                     - ${XMPP_DOMAIN}
 
@@ -105,7 +104,7 @@ services:
             - LOG_LEVEL
             - TZ
         networks:
-            meet.jitsi:
+            nginx-proxy:
                 aliases:
                     - ${XMPP_SERVER}
 
@@ -132,7 +131,7 @@ services:
         depends_on:
             - prosody
         networks:
-            meet.jitsi:
+            nginx-proxy:
 
     # Video bridge
     jvb:
@@ -159,11 +158,11 @@ services:
         depends_on:
             - prosody
         networks:
-            meet.jitsi:
+            nginx-proxy:
 
 # Custom network so all services can communicate using a FQDN
 networks:
     default:
         external:
           name: nginx-proxy
-    meet.jitsi:
+    nginx-proxy:
