fix(test): trying base ports and castornaute domain instead

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ HTTPS_PORT=8443
 TZ=Europe/Amsterdam
 
 # Public URL for the web service.
-#PUBLIC_URL="https://meet.agenixo.eu"
+#PUBLIC_URL="https://meet.castornaute.com"
 
 # IP address of the Docker host. See the "Running on a LAN environment" section
 # in the README.
@@ -30,10 +30,10 @@ TZ=Europe/Amsterdam
 #ENABLE_LETSENCRYPT=0
 
 # Domain for which to generate the certificate.
-#LETSENCRYPT_DOMAIN=meet.agenixo.eu
+#LETSENCRYPT_DOMAIN=meet.castornaute.com
 
 # E-Mail for receiving important account notifications (mandatory).
-#LETSENCRYPT_EMAIL=dev@agenixo.eu
+#LETSENCRYPT_EMAIL=dev@castornaute.com
 
 
 #
