--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,9 @@ services:
     # Frontend
     web:
         image: jitsi/web
-        ports:
-            - '${HTTP_PORT}:80'
-            - '${HTTPS_PORT}:443'
         expose:
             - 80
+            - 443
         volumes:
             - ${CONFIG}/web:/config
             - ${CONFIG}/transcripts:/usr/share/jitsi-meet/transcripts
@@ -21,9 +19,9 @@ services:
             - DISABLE_HTTPS
             - JICOFO_AUTH_USER
             - LETSENCRYPT_DOMAIN
-            - VIRTUAL_HOST=meet.agenixo.eu
-            - LETSENCRYPT_HOST=meet.agenixo.eu
-            - LETSENCRYPT_EMAIL=dev@agenixo.eu
+            - VIRTUAL_HOST=meet.castornaute.com
+            - LETSENCRYPT_HOST=meet.castornaute.com
+            - LETSENCRYPT_EMAIL=dev@castornaute.com
             - PUBLIC_URL
             - XMPP_DOMAIN
             - XMPP_AUTH_DOMAIN
