fix(setup): disable internal https and cert generation.

--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ TZ=Europe/Amsterdam
 #
 
 # Enable Let's Encrypt certificate generation.
-#ENABLE_LETSENCRYPT=0
+ENABLE_LETSENCRYPT=0
 
 # Domain for which to generate the certificate.
 #LETSENCRYPT_DOMAIN=meet.castornaute.com
@@ -296,7 +296,7 @@ JIBRI_STRIP_DOMAIN_JID=muc
 JIBRI_LOGS_DIR=/config/logs
 
 # Disable HTTPS. This can be useful if TLS connections are going to be handled outside of this setup.
-#DISABLE_HTTPS=1
+DISABLE_HTTPS=1
 
 # Redirects HTTP traffic to HTTPS. Only works with the standard HTTPS port (443).
 #ENABLE_HTTP_REDIRECT=1
