--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,8 @@ services:
     # Frontend
     web:
         image: jitsi/web
-        ports:
-            - '${HTTP_PORT}:80'
-            - '${HTTPS_PORT}:443'
         expose:
             - 80
-            - 443
         volumes:
             - ${CONFIG}/web:/config
             - ${CONFIG}/transcripts:/usr/share/jitsi-meet/transcripts
@@ -42,7 +38,7 @@ services:
             - JIBRI_RECORDER_PASSWORD
             - ENABLE_RECORDING
         networks:
-            nginx-proxy:
+            meet.jitsi:
                 aliases:
                     - ${XMPP_DOMAIN}
 
@@ -105,7 +101,7 @@ services:
             - LOG_LEVEL
             - TZ
         networks:
-            nginx-proxy:
+            meet.jitsi:
                 aliases:
                     - ${XMPP_SERVER}
 
@@ -132,7 +128,7 @@ services:
         depends_on:
             - prosody
         networks:
-            nginx-proxy:
+            meet.jitsi:
 
     # Video bridge
     jvb:
@@ -159,11 +155,11 @@ services:
         depends_on:
             - prosody
         networks:
-            nginx-proxy:
+            meet.jitsi:
 
 # Custom network so all services can communicate using a FQDN
 networks:
     default:
         external:
           name: nginx-proxy
-    nginx-proxy:
+    meet.jitsi:
