--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ HTTPS_PORT=8443
 TZ=Europe/Amsterdam
 
 # Public URL for the web service.
-PUBLIC_URL="https://meet.agenixo.eu"
+PUBLIC_URL="https://meet.castornaute.com"
 
 # IP address of the Docker host. See the "Running on a LAN environment" section
 # in the README.
